# odin-secure-comm

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT_GUIDE.md  LICENSE  MANUAL-DEPLOYMENT.md  MARKETPLACE.md  README.md  config.template.ps1  policy.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy-connector.yml  deploy-simple.yml  deploy.yml
backup/org-policies/: org-policies-20250821-153739.json
deploy/: Dockerfile  cloudrun_service.yaml
docs/: CONNECTOR_README.md
libs/odin/: crypto.py  keys.py  models.py
openapi/: odin-connector.yaml  odin-openapi.yaml
scripts/: auth-test-clean.ps1  auth-test.ps1  backup-org-policies.ps1  clear-org-policies.ps1  create_client_sa.ps1  create_org_project.ps1  create_org_simple.ps1  deploy-integration-connector.ps1  deploy-rest-api.ps1  deploy_clean.ps1  deploy_cloudrun.ps1  deploy_marketplace.ps1  deploy_org.ps1  deployment-options.ps1  dev.ps1  diagnose-deployment.ps1  gcloud_setup.ps1  gcloud_setup_clean.ps1  identity-token.ps1  identity-token.sh  marketplace_quota_guide.ps1  open-console.ps1  org_foundation_check.ps1  org_foundation_guide.ps1  quota_guide_clean.ps1  run_e2e.ps1  setup-github-actions.ps1  setup_marketplace_vpc.ps1  setup_org_vpc.ps1  setup_org_vpc_clean.ps1  setup_simple.ps1  simple-test.ps1  test-endpoints.ps1  test-simple.ps1  validate_marketplace.py  validate_openapi.py  validate_terraform.py  wif_setup.ps1
services/gateway/: Dockerfile  app.py  discovery.py  envelope.py  hel.py  jwks.py  jwks_loader.py  metrics.py  middleware.py  receipts.py
services/gateway/storage/: __init__.py  base.py  firestore.py  in_memory.py
terraform/: integration-connector.tf
tests/: conftest.py  odin-connector.http
tests/00_smoke/: test_discovery_jwks.py  test_health.py
tests/10_security/: test_envelope_verify_sign.py
tests/20_receipts/: test_chain_reconstruct.py  test_receipt_write_and_fetch.py
tests/30_policy/: test_hel_lite_blocks_oversize.py
tests/40_metrics/: test_metrics_exposed.py
