[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "odin-secure-comm"
version = "0.1.1"
description = "AI-to-AI secure communication layer built on the ODIN protocol"
authors = [{name = "ODIN Protocol", email = "travisjohnson@odinprotocol.dev"}]
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["ai", "communication", "cryptography", "receipts", "odin", "protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11,<3.12"

# Core toolchain pins
dependencies = [
	"fastapi==0.110.*",
	"starlette==0.37.*",
	"pydantic==2.6.*",
	"httpx==0.27.*",
	"prometheus-client==0.20.*",
	"google-cloud-firestore>=2.15.0,<3.0.0",
	"google-cloud-secret-manager>=2.20.0,<3.0.0",
	"cryptography>=42.0.0,<43.0.0",
	"uvicorn>=0.29.0,<0.30.0",
]

[project.urls]
Homepage = "https://github.com/Maverick0351a/odin-secure-comm"
Documentation = "https://docs.odinprotocol.dev"
Repository = "https://github.com/Maverick0351a/odin-secure-comm.git"
Issues = "https://github.com/Maverick0351a/odin-secure-comm/issues"
